second version: content fix

--- a/products.html
+++ b/products.html
@@ -17,11 +17,10 @@
                 <img src="logo-refined.svg" alt="BOLA JAPAN Logo" class="logo-image">
             </div>
             <ul class="nav-menu">
-                <li><a href="home.html">ホーム</a></li>
+                <li><a href="index.html">トップ</a></li>
                 <li><a href="about.html">会社概要</a></li>
-                <li><a href="products.html" class="active">商品</a></li>
-                <li><a href="process.html">製造工程</a></li>
-                <li><a href="gallery.html">ギャラリー</a></li>
+                <li><a href="products.html" class="active">商品紹介</a></li>
+                <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
                 <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
             <div class="hamburger">
@@ -35,8 +34,8 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>厳選商品</h1>
-            <p>伝統の技、現代の品質</p>
+            <h1>商品紹介</h1>
+            <p style="text-align:center; margin-bottom:40px;">台湾烏魚子（台湾カラスミ）は、新鮮なボラの卵巣を丁寧に塩漬けし、天日干しで仕上げた台湾の代表的な珍味です。濃厚な旨味と独特の風味で、「海のチーズ」とも称されます。BOLA JAPANでは、台湾から直輸入した最高品質のカラスミを、用途に合わせてご用意しています。</p>
         </div>
     </section>
 
@@ -44,184 +43,49 @@
     <section class="products">
         <div class="container">
             <div class="products-grid">
+                <!-- Product 1 -->
                 <div class="product-card detailed" data-aos="fade-up">
                     <div class="product-image">
-                        <img src="images/烏金條.jpg" alt="特級烏魚子" class="product-img">
-                        <div class="product-badge">人気商品</div>
+                        <img src="images/一口吃.jpg" alt="一口サイズのカラスミ" class="product-img">
                     </div>
                     <div class="product-info">
-                        <h3>特級烏魚子</h3>
-                        <p class="product-description">厳選された優質な烏魚卵を使用し、伝統的な天日干し製法で仕上げた、濃厚で香り豊かな烏魚子です。職人の技術により、一つ一つ丁寧に作られた最高級品です。</p>
-                        <div class="product-features">
-                            <span class="feature">無添加防腐剤</span>
-                            <span class="feature">天然天日干し</span>
-                            <span class="feature">真空包装</span>
-                        </div>
-                        <div class="product-specs">
-                            <div class="spec-item">
-                                <strong>重量:</strong> 150g〜200g
-                            </div>
-                            <div class="spec-item">
-                                <strong>保存期間:</strong> 冷蔵で3ヶ月
-                            </div>
-                            <div class="spec-item">
-                                <strong>原産地:</strong> 台湾
-                            </div>
-                        </div>
+                        <h3>一口サイズ</h3>
+                        <p class="product-description">少人数やお酒のおつまみにぴったりな食べきりサイズ。手軽に台湾カラスミの風味を楽しめます。濃厚な旨味を一口で堪能でき、初めての方にもおすすめです。</p>
                         <div class="product-actions">
                             <a href="contact.html" class="btn-primary">お問い合わせ</a>
                         </div>
                     </div>
                 </div>
 
+                <!-- Product 2 -->
                 <div class="product-card detailed" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-image">
-                        <img src="images/一口吃.jpg" alt="ギフト用烏魚子" class="product-img">
-                        <div class="product-badge">ギフト</div>
+                        <img src="images/烏金條.jpg" alt="一本サイズのカラスミ" class="product-img">
                     </div>
                     <div class="product-info">
-                        <h3>ギフト用烏魚子</h3>
-                        <p class="product-description">美しい包装で、贈り物に最適です。様々なサイズをご用意し、お客様のニーズにお応えします。特別な日の贈り物として、大切な方へお届けください。</p>
-                        <div class="product-features">
-                            <span class="feature">美しい包装</span>
-                            <span class="feature">様々なサイズ</span>
-                            <span class="feature">贈り物に最適</span>
-                        </div>
-                        <div class="product-specs">
-                            <div class="spec-item">
-                                <strong>セット内容:</strong> 烏魚子 + 専用包装
-                            </div>
-                            <div class="spec-item">
-                                <strong>サイズ:</strong> S, M, Lサイズ
-                            </div>
-                            <div class="spec-item">
-                                <strong>包装:</strong> 高級ギフトボックス
-                            </div>
-                        </div>
+                        <h3>一本サイズ</h3>
+                        <p class="product-description">贈答用にも人気の一本もの。しっとりとした口当たりと凝縮された旨味を大切な方への贈り物に。本格的な台湾カラスミの深い味わいを存分にお楽しみいただけます。</p>
                         <div class="product-actions">
                             <a href="contact.html" class="btn-primary">お問い合わせ</a>
                         </div>
                     </div>
                 </div>
 
+                <!-- Product 3 -->
                 <div class="product-card detailed" data-aos="fade-up" data-aos-delay="400">
                     <div class="product-image">
-                        <img src="images/1.jpg" alt="業務用烏魚子" class="product-img">
-                        <div class="product-badge">業務用</div>
+                        <img src="images/1.jpg" alt="ギフトセット" class="product-img">
                     </div>
                     <div class="product-info">
-                        <h3>業務用烏魚子</h3>
-                        <p class="product-description">レストランやホテルなどの業務用に適した大容量包装です。安定した品質と競争力のある価格で、プロの料理人の皆様をサポートします。</p>
-                        <div class="product-features">
-                            <span class="feature">大容量</span>
-                            <span class="feature">業務用</span>
-                            <span class="feature">大量購入割引</span>
-                        </div>
-                        <div class="product-specs">
-                            <div class="spec-item">
-                                <strong>最小注文:</strong> 10kg〜
-                            </div>
-                            <div class="spec-item">
-                                <strong>包装:</strong> 業務用真空パック
-                            </div>
-                            <div class="spec-item">
-                                <strong>納期:</strong> 3-5営業日
-                            </div>
-                        </div>
+                        <h3>ギフトセット</h3>
+                        <p class="product-description">さまざまなサイズを組み合わせた詰め合わせセット。年末年始やお祝い事の贈り物に喜ばれます。美しい包装でお届けし、特別な日の贈り物として最適です。</p>
                         <div class="product-actions">
                             <a href="contact.html" class="btn-primary">お問い合わせ</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Product Categories -->
-    <section class="product-categories">
-        <div class="container">
-            <div class="section-header">
-                <h2>商品カテゴリー</h2>
-                <p>お客様のニーズに合わせた多様な商品展開</p>
-            </div>
-            <div class="categories-grid">
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="fas fa-crown"></i>
-                    </div>
-                    <h3>プレミアム</h3>
-                    <p>最高級の原料と職人技で作られた特別な烏魚子</p>
-                    <ul>
-                        <li>特級烏魚子</li>
-                        <li>限定生産品</li>
-                        <li>職人手作り</li>
-                    </ul>
-                </div>
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="fas fa-gift"></i>
-                    </div>
-                    <h3>ギフト</h3>
-                    <p>贈り物に最適な美しい包装の商品</p>
-                    <ul>
-                        <li>ギフトセット</li>
-                        <li>季節限定包装</li>
-                        <li>のし対応</li>
-                    </ul>
-                </div>
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="fas fa-utensils"></i>
-                    </div>
-                    <h3>業務用</h3>
-                    <p>レストラン・ホテル向けの大容量商品</p>
-                    <ul>
-                        <li>大容量パック</li>
-                        <li>業務用価格</li>
-                        <li>定期配送</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Quality Assurance -->
-    <section class="quality-section">
-        <div class="container">
-            <div class="section-header">
-                <h2>品質保証</h2>
-                <p>安心・安全へのこだわり</p>
-            </div>
-            <div class="quality-grid">
-                <div class="quality-item">
-                    <div class="quality-icon">
-                        <i class="fas fa-microscope"></i>
-                    </div>
-                    <h3>厳格な検査</h3>
-                    <p>すべての商品が厳しい品質検査をクリア</p>
-                </div>
-                <div class="quality-item">
-                    <div class="quality-icon">
-                        <i class="fas fa-temperature-low"></i>
-                    </div>
-                    <h3>温度管理</h3>
-                    <p>輸送・保管時の徹底した温度管理</p>
-                </div>
-                <div class="quality-item">
-                    <div class="quality-icon">
-                        <i class="fas fa-certificate"></i>
-                    </div>
-                    <h3>認証取得</h3>
-                    <p>食品安全に関する各種認証を取得</p>
-                </div>
-                <div class="quality-item">
-                    <div class="quality-icon">
-                        <i class="fas fa-clock"></i>
-                    </div>
-                    <h3>鮮度保持</h3>
-                    <p>最適な包装技術で鮮度を長期間保持</p>
-                </div>
-            </div>
+            <p style="text-align:center; margin-top:40px;">その他のサイズや数量、ギフト包装などのご要望にも対応いたします。オーダーメイドのギフトセットや特別なご用途に合わせたカスタマイズも承っております。美しい包装紙やのし紙もご用意できますので、大切な方への贈り物としても安心してお選びいただけます。お気軽にお問い合わせください。</p>
         </div>
     </section>
 
@@ -239,8 +103,7 @@
                         <ul>
                             <li><a href="about.html">会社概要</a></li>
                             <li><a href="products.html">商品紹介</a></li>
-                            <li><a href="process.html">製造工程</a></li>
-                            <li><a href="gallery.html">ギャラリー</a></li>
+                            <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
