--- a/about.html
+++ b/about.html
@@ -17,11 +17,10 @@
                 <img src="logo-refined.svg" alt="BOLA JAPAN Logo" class="logo-image">
             </div>
             <ul class="nav-menu">
-                <li><a href="home.html">ホーム</a></li>
+                <li><a href="index.html">トップ</a></li>
                 <li><a href="about.html" class="active">会社概要</a></li>
-                <li><a href="products.html">商品</a></li>
-                <li><a href="process.html">製造工程</a></li>
-                <li><a href="gallery.html">ギャラリー</a></li>
+                <li><a href="products.html">商品紹介</a></li>
+                <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
                 <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
             <div class="hamburger">
@@ -35,137 +34,80 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>BOLA JAPANについて</h1>
-            <p>伝統と革新の完璧な融合</p>
+            <h1>会社概要</h1>
         </div>
     </section>
 
-    <!-- About Section -->
-    <section class="about">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-text">
-                    <div class="about-card">
-                        <div class="card-icon">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <h3>私たちの使命</h3>
-                        <p>「おいしいもの」には国境がない - 美味に国境なし。私たちは世界中の優れた食品を日本に届けることを使命とし、特に厳選された烏魚子を通じて、日本の食卓に独特な風味を提供します。</p>
-                    </div>
-                    <div class="about-card">
-                        <div class="card-icon">
-                            <i class="fas fa-certificate"></i>
-                        </div>
-                        <h3>品質保証</h3>
-                        <p>原料選定から最終包装まで、すべての工程を厳格に管理し、最高品質の製品をお届けします。安全性と美味しさ、私たちは妥協しません。</p>
-                    </div>
-                    <div class="about-card">
-                        <div class="card-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <h3>柔軟なサービス</h3>
-                        <p>小規模チームとして、柔軟な対応と迅速なレスポンスを重視しています。個人のお客様から企業様まで、お客様一人ひとりに合わせたサービスをご提供いたします。</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Company Info Section -->
+    <!-- Company Info Table Section -->
     <section class="company-details">
         <div class="container">
-            <div class="section-header">
-                <h2>会社情報</h2>
-                <p>BOLA JAPANの基本情報</p>
-            </div>
-            <div class="company-info-grid">
-                <div class="info-card">
-                    <div class="info-icon">
-                        <i class="fas fa-building"></i>
-                    </div>
-                    <div class="info-content">
-                        <h4>会社名</h4>
-                        <p>合同会社 BOLA JAPAN</p>
-                    </div>
-                </div>
-                <div class="info-card">
-                    <div class="info-icon">
-                        <i class="fas fa-user-tie"></i>
-                    </div>
-                    <div class="info-content">
-                        <h4>代表社員</h4>
-                        <p>岡田 泉</p>
-                    </div>
-                </div>
-                <div class="info-card">
-                    <div class="info-icon">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <div class="info-content">
-                        <h4>設立</h4>
-                        <p>2025年4月16日</p>
-                    </div>
-                </div>
-                <div class="info-card">
-                    <div class="info-icon">
-                        <i class="fas fa-yen-sign"></i>
-                    </div>
-                    <div class="info-content">
-                        <h4>資本金</h4>
-                        <p>200万円</p>
-                    </div>
-                </div>
-                <div class="info-card">
-                    <div class="info-icon">
-                        <i class="fas fa-map-marker-alt"></i>
-                    </div>
-                    <div class="info-content">
-                        <h4>所在地</h4>
-                        <p>〒106-0044<br>東京都港区東麻布2丁目35番1号<br>KCビル321号室</p>
-                    </div>
-                </div>
-                <div class="info-card">
-                    <div class="info-icon">
-                        <i class="fas fa-fish"></i>
-                    </div>
-                    <div class="info-content">
-                        <h4>事業内容</h4>
-                        <p>烏魚子の輸入・販売<br>食品の輸入・卸売り</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+            <!-- Company Info Table -->
+            <table class="company-table">
+                <tr>
+                    <th>会社名</th>
+                    <td>合同会社 BOLA JAPAN<br /><small>（英語表記：BOLA JAPAN G.K.）</small></td>
+                </tr>
+                <tr>
+                    <th>本社所在地</th>
+                    <td>〒106-0044 東京都港区東麻布2丁目35番1号 KCビル321号室</td>
+                </tr>
+                <tr>
+                    <th>役員</th>
+                    <td>代表社員&nbsp;岡田&nbsp;泉<br />業務執行社員&nbsp;林&nbsp;冠君</td>
+                </tr>
+                <tr>
+                    <th>設立</th>
+                    <td>2025年4月16日</td>
+                </tr>
+                <tr>
+                    <th>事業年度</th>
+                    <td>毎年1月1日から12月31日まで</td>
+                </tr>
+                <tr>
+                    <th>従業員数</th>
+                    <td>2名</td>
+                </tr>
+                <tr>
+                    <th>資本金</th>
+                    <td>200万円</td>
+                </tr>
+                <tr>
+                    <th>業務内容</th>
+                    <td>
+                        加工水産物輸入業／食品販売での広告業務／加工水産物・食品輸入の企画・制作及び販売／前各号に付帯する一切の業務
+                    </td>
+                </tr>
+                <tr>
+                    <th>主な取引銀行</th>
+                    <td>住信SBIネット銀行・三井住友銀行</td>
+                </tr>
+            </table>
 
-    <!-- Values Section -->
-    <section class="values-section">
-        <div class="container">
-            <div class="section-header">
-                <h2>私たちの価値観</h2>
-                <p>BOLA JAPANが大切にしていること</p>
-            </div>
-            <div class="values-grid">
-                <div class="value-item">
-                    <div class="value-number">01</div>
-                    <h3>品質第一</h3>
-                    <p>お客様に最高の商品をお届けするため、品質に対して一切の妥協をしません。</p>
+            <!-- President Greeting -->
+            <div class="about-section">
+                <div class="photo">
+                    <img src="images/president.jpg" alt="代表社員 岡田泉" />
                 </div>
-                <div class="value-item">
-                    <div class="value-number">02</div>
-                    <h3>信頼関係</h3>
-                    <p>お客様との長期的な信頼関係を築くことを最も重要な価値として考えています。</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-number">03</div>
-                    <h3>革新精神</h3>
-                    <p>伝統を大切にしながらも、常に新しい技術やアイデアを取り入れて改善を続けます。</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-number">04</div>
-                    <h3>顧客第一</h3>
-                    <p>お客様のニーズを深く理解し、期待を上回るサービスを提供することを心がけています。</p>
+                <div class="info">
+                    <h2>代表挨拶</h2>
+                    <p>はじめまして。合同会社BOLA&nbsp;JAPANの岡田&nbsp;泉です。このたびは当社のホームページをご覧いただき、ありがとうございます。BOLA&nbsp;JAPANは2025年4月に誕生した、まだ小さな会社です。</p>
+                    <p>私たちは、水産加工品をはじめとする食品の輸入・販売や、それに関わる広告・企画業務を手がけています。"おいしいもの"には国境がない――そんな想いから、日本の食卓にもっと多彩で魅力的な食品を届けたいと考えています。</p>
+                    <p>安全で品質の高い商品を、世界中から選び抜き、丁寧に届ける。そのために、少人数だからこそできる柔軟な対応とスピード感を大切にしています。</p>
+                    <p>私たちの挑戦はまだ始まったばかりですが、真摯に、そして楽しみながら成長していきたいと思っています。今後とも、BOLA&nbsp;JAPANをどうぞよろしくお願いいたします。</p>
+                    <p style="margin-top: 1rem;">合同会社 BOLA&nbsp;JAPAN<br />代表社員&nbsp;岡田&nbsp;泉</p>
                 </div>
             </div>
+
+            <!-- IR Information -->
+            <h2 class="section-title" style="margin-top:60px;">IR情報・電子公告</h2>
+            <p>現在、公告をなすべき事項はございません。決算公告や売上高などの情報は、準備が整い次第随時掲載いたします。</p>
+
+            <!-- Head Office Information -->
+            <h2 class="section-title" style="margin-top:60px;">本社情報</h2>
+            <p><strong>所在地：</strong>〒106-0044 東京都港区東麻布2丁目35番1号 KCビル321号室</p>
+            <p><strong>営業時間：</strong>平日 10:00〜17:00</p>
+            <p><strong>休業日：</strong>土曜・日曜・祝日・年末年始</p>
+            <p><strong>沿革：</strong>2025年4月　加工水産食品販売専門事業会社として設立</p>
         </div>
     </section>
 
@@ -183,8 +125,7 @@
                         <ul>
                             <li><a href="about.html">会社概要</a></li>
                             <li><a href="products.html">商品紹介</a></li>
-                            <li><a href="process.html">製造工程</a></li>
-                            <li><a href="gallery.html">ギャラリー</a></li>
+                            <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
