--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,10 @@
                 <img src="logo-refined.svg" alt="BOLA JAPAN Logo" class="logo-image">
             </div>
             <ul class="nav-menu">
-                <li><a href="home.html">ホーム</a></li>
+                <li><a href="index.html">トップ</a></li>
                 <li><a href="about.html">会社概要</a></li>
-                <li><a href="products.html">商品</a></li>
-                <li><a href="process.html">製造工程</a></li>
-                <li><a href="gallery.html">ギャラリー</a></li>
+                <li><a href="products.html">商品紹介</a></li>
+                <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
                 <li><a href="contact.html" class="active">お問い合わせ</a></li>
             </ul>
             <div class="hamburger">
@@ -40,245 +39,34 @@
         </div>
     </section>
 
-    <!-- Contact Methods -->
-    <section class="contact-methods">
-        <div class="container">
-            <div class="section-header">
-                <h2>お問い合わせ方法</h2>
-                <p>お客様にとって最適な方法でご連絡ください</p>
-            </div>
-            <div class="methods-grid">
-                <div class="method-card">
-                    <div class="method-icon">
-                        <i class="fas fa-phone"></i>
+    <main>
+        <section class="contact">
+            <div class="container">
+                <div class="contact-content" style="display: block; text-align: center; max-width: 800px; margin: 0 auto;">
+                    <div class="contact-item" style="display: block; text-align: center; margin-bottom: 40px;">
+                        <div>
+                            <h4>お問い合わせについて</h4>
+                            <p>商品のご質問やご注文に関するお問い合わせは、下記メールアドレスまでお気軽にご連絡ください。</p>
+                        </div>
                     </div>
-                    <h3>お電話</h3>
-                    <p>お急ぎの方はお電話でお問い合わせください</p>
-                    <div class="method-details">
-                        <strong>+81-3-XXXX-XXXX</strong>
-                        <span>営業時間内にお願いします</span>
-                    </div>
-                </div>
-                <div class="method-card">
-                    <div class="method-icon">
-                        <i class="fas fa-envelope"></i>
-                    </div>
-                    <h3>メール</h3>
-                    <p>詳細なお問い合わせはメールでお送りください</p>
-                    <div class="method-details">
-                        <strong>info@bola-japan.com</strong>
-                        <span>24時間受付</span>
-                    </div>
-                </div>
-                <div class="method-card">
-                    <div class="method-icon">
-                        <i class="fas fa-comments"></i>
-                    </div>
-                    <h3>お問い合わせフォーム</h3>
-                    <p>下記フォームからも簡単にお問い合わせいただけます</p>
-                    <div class="method-details">
-                        <strong>24時間受付</strong>
-                        <span>2営業日以内にご返信</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Contact Section -->
-    <section class="contact">
-        <div class="container">
-            <div class="contact-content">
-                <div class="contact-info">
-                    <h3>会社情報</h3>
-                    <div class="contact-item">
-                        <i class="fas fa-building"></i>
-                        <div>
-                            <h4>会社名</h4>
-                            <p>合同会社 BOLA JAPAN</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div>
-                            <h4>会社住所</h4>
-                            <p>〒106-0044<br>東京都港区東麻布2丁目35番1号<br>KCビル321号室</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <div>
-                            <h4>お電話</h4>
-                            <p>+81-3-XXXX-XXXX</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
+                    <div class="contact-item" style="display: block; text-align: center; margin-bottom: 40px;">
                         <div>
                             <h4>メールアドレス</h4>
-                            <p>info@bola-japan.com</p>
+                            <p><a href="mailto:info@bolajapan.jp" style="color: #ff6b35; font-weight: 600; text-decoration: none; font-size: 1.2rem;">info@bolajapan.jp</a></p>
                         </div>
                     </div>
-                    <div class="contact-item">
-                        <i class="fas fa-clock"></i>
+
+                    <div class="contact-item" style="display: block; text-align: center;">
                         <div>
-                            <h4>営業時間</h4>
-                            <p>月曜日〜金曜日 9:00-18:00<br>土曜日 9:00-12:00</p>
+                            <h4>回答について</h4>
+                            <p>通常、2〜3営業日以内に担当者よりお返事させていただきます。</p>
                         </div>
-                    </div>
-
-                    <div class="business-hours">
-                        <h4>営業カレンダー</h4>
-                        <div class="hours-grid">
-                            <div class="day-item">
-                                <span class="day">月</span>
-                                <span class="hours">9:00-18:00</span>
-                            </div>
-                            <div class="day-item">
-                                <span class="day">火</span>
-                                <span class="hours">9:00-18:00</span>
-                            </div>
-                            <div class="day-item">
-                                <span class="day">水</span>
-                                <span class="hours">9:00-18:00</span>
-                            </div>
-                            <div class="day-item">
-                                <span class="day">木</span>
-                                <span class="hours">9:00-18:00</span>
-                            </div>
-                            <div class="day-item">
-                                <span class="day">金</span>
-                                <span class="hours">9:00-18:00</span>
-                            </div>
-                            <div class="day-item">
-                                <span class="day">土</span>
-                                <span class="hours">9:00-12:00</span>
-                            </div>
-                            <div class="day-item closed">
-                                <span class="day">日</span>
-                                <span class="hours">定休日</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="contact-form">
-                    <h3>お問い合わせフォーム</h3>
-                    <form id="contactForm">
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="lastName">姓</label>
-                                <input type="text" id="lastName" name="lastName" placeholder="山田" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="firstName">名</label>
-                                <input type="text" id="firstName" name="firstName" placeholder="太郎" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">メールアドレス</label>
-                            <input type="email" id="email" name="email" placeholder="example@email.com" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="phone">お電話番号</label>
-                            <input type="tel" id="phone" name="phone" placeholder="03-1234-5678">
-                        </div>
-                        <div class="form-group">
-                            <label for="company">会社名・団体名</label>
-                            <input type="text" id="company" name="company" placeholder="株式会社○○○">
-                        </div>
-                        <div class="form-group">
-                            <label for="inquiryType">お問い合わせ種類</label>
-                            <select id="inquiryType" name="inquiryType" required>
-                                <option value="">選択してください</option>
-                                <option value="product">商品について</option>
-                                <option value="order">ご注文について</option>
-                                <option value="wholesale">卸売りについて</option>
-                                <option value="partnership">業務提携について</option>
-                                <option value="other">その他</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">件名</label>
-                            <input type="text" id="subject" name="subject" placeholder="お問い合わせの件名をご入力ください" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">お問い合わせ内容</label>
-                            <textarea id="message" name="message" rows="8" placeholder="お問い合わせ内容を詳しくご記入ください" required></textarea>
-                        </div>
-                        <div class="form-group checkbox-group">
-                            <label class="checkbox-label">
-                                <input type="checkbox" id="privacy" name="privacy" required>
-                                <span class="checkmark"></span>
-                                <a href="#">プライバシーポリシー</a>に同意します
-                            </label>
-                        </div>
-                        <button type="submit" class="btn-primary submit-btn">
-                            <span class="btn-text">送信する</span>
-                            <span class="btn-loading">送信中...</span>
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- FAQ Section -->
-    <section class="faq-section">
-        <div class="container">
-            <div class="section-header">
-                <h2>よくあるご質問</h2>
-                <p>お問い合わせの前にこちらもご確認ください</p>
-            </div>
-            <div class="faq-list">
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <h4>烏魚子の保存方法を教えてください</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>開封前は冷蔵庫で保存し、開封後は真空パックまたはラップで包んで冷蔵保存してください。冷蔵で約3ヶ月、冷凍で約6ヶ月保存可能です。</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <h4>最小注文数量はありますか？</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>個人のお客様は1個から、業務用は10kg以上からご注文を承っております。詳細はお問い合わせください。</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <h4>配送にはどのくらい時間がかかりますか？</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>ご注文確定後、通常3-5営業日でお届けします。地域や商品によって異なる場合がございます。</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <h4>ギフト包装は可能ですか？</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>はい、ギフト包装やのし紙の対応も承っております。ご注文時にお申し付けください。</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <h4>支払い方法について教えてください</h4>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="faq-answer">
-                        <p>銀行振込、クレジットカード、代金引換をご利用いただけます。法人様は請求書払いも対応しております。</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -294,8 +82,7 @@
                         <ul>
                             <li><a href="about.html">会社概要</a></li>
                             <li><a href="products.html">商品紹介</a></li>
-                            <li><a href="process.html">製造工程</a></li>
-                            <li><a href="gallery.html">ギャラリー</a></li>
+                            <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
