--- a/index.html
+++ b/index.html
@@ -4,23 +4,137 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOLA JAPAN - 烏魚子専門店</title>
-    <meta http-equiv="refresh" content="0; url=home.html">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Redirect notice for users with JavaScript disabled -->
-    <div style="text-align: center; padding: 50px; font-family: Inter, sans-serif;">
-        <h1>BOLA JAPAN</h1>
-        <p>ページを読み込み中です...</p>
-        <p><a href="home.html">こちらをクリックしてホームページに移動</a></p>
-    </div>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <img src="logo-refined.svg" alt="BOLA JAPAN Logo" class="logo-image">
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="active">トップ</a></li>
+                <li><a href="about.html">会社概要</a></li>
+                <li><a href="products.html">商品紹介</a></li>
+                <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
 
-    <script>
-        // Immediate redirect for JavaScript-enabled browsers
-        window.location.href = 'home.html';
-    </script>
+    <!-- Hero Section -->
+    <section class="hero full-height">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1 class="hero-title">
+                    <span class="title-line">美味に国境なし</span>
+                    <span class="title-line">Delicious Food</span>
+                    <span class="title-line">Knows No Borders</span>
+                </h1>
+                <p class="hero-subtitle">世界中の厳選された烏魚子を、日本の食卓にお届けします</p>
+                <div class="hero-buttons">
+                    <a href="products.html" class="btn-primary">商品を見る</a>
+                    <a href="about.html" class="btn-secondary">詳しく見る</a>
+                </div>
+            </div>
+            <div class="hero-visual">
+                <div class="floating-elements">
+                    <div class="roe-element" data-speed="2"></div>
+                    <div class="roe-element" data-speed="1.5"></div>
+                    <div class="roe-element" data-speed="3"></div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll-indicator">
+            <div class="scroll-dot"></div>
+        </div>
+    </section>
+
+    <!-- Quick Features Section -->
+    <section class="quick-features">
+        <div class="container">
+            <div class="features-grid">
+                <div class="feature-card" data-aos="fade-up">
+                    <div class="feature-icon">
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h3>最高品質</h3>
+                    <p>厳選された原料と伝統的な製法で作られた、最高品質の烏魚子をお届けします</p>
+                </div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+                    <div class="feature-icon">
+                        <i class="fas fa-shipping-fast"></i>
+                    </div>
+                    <h3>迅速配送</h3>
+                    <p>新鮮さを保つため、ご注文から迅速にお客様のもとへお届けします</p>
+                </div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
+                    <div class="feature-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <h3>安全保証</h3>
+                    <p>すべての製品は厳格な品質検査をクリアした、安全で安心な商品です</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta-section">
+        <div class="container">
+            <div class="cta-content">
+                <h2>BOLA JAPANの烏魚子を体験してみませんか？</h2>
+                <p>伝統の技と現代の品質管理で作られた、特別な烏魚子をお試しください</p>
+                <div class="cta-buttons">
+                    <a href="products.html" class="btn-primary">商品を見る</a>
+                    <a href="contact.html" class="btn-secondary">お問い合わせ</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="logo-refined.svg" alt="BOLA JAPAN Logo" class="footer-logo-image">
+                    <p>美味に国境なし、品質に保証あり</p>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-section">
+                        <h4>会社情報</h4>
+                        <ul>
+                            <li><a href="about.html">会社概要</a></li>
+                            <li><a href="products.html">商品紹介</a></li>
+                            <li><a href="recipes.html">台湾カラスミの食べ方</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>お問い合わせ</h4>
+                        <ul>
+                            <li><a href="contact.html">お問い合わせ</a></li>
+                            <li><a href="#">プライバシーポリシー</a></li>
+                            <li><a href="#">利用規約</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 BOLA JAPAN. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
