--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOLA JAPAN - 烏魚子専門店</title>
+    <title>BOLA JAPAN - カラスミ専門店</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
                     <span class="title-line">Delicious Food</span>
                     <span class="title-line">Knows No Borders</span>
                 </h1>
-                <p class="hero-subtitle">世界中の厳選された烏魚子を、日本の食卓にお届けします</p>
+                <p class="hero-subtitle">台湾の厳選されたカラスミを、日本の食卓にお届けします</p>
                 <div class="hero-buttons">
                     <a href="products.html" class="btn-primary">商品を見る</a>
                     <a href="about.html" class="btn-secondary">詳しく見る</a>
@@ -68,7 +68,7 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <h3>最高品質</h3>
-                    <p>厳選された原料と伝統的な製法で作られた、最高品質の烏魚子をお届けします</p>
+                    <p>厳選された原料と伝統的な製法で作られた、最高品質のカラスミをお届けします</p>
                 </div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="feature-icon">
@@ -92,8 +92,8 @@
     <section class="cta-section">
         <div class="container">
             <div class="cta-content">
-                <h2>BOLA JAPANの烏魚子を体験してみませんか？</h2>
-                <p>伝統の技と現代の品質管理で作られた、特別な烏魚子をお試しください</p>
+                <h2>BOLA JAPANのカラスミを体験してみませんか？</h2>
+                <p>伝統の技と現代の品質管理で作られた、特別なカラスミをお試しください</p>
                 <div class="cta-buttons">
                     <a href="products.html" class="btn-primary">商品を見る</a>
                     <a href="contact.html" class="btn-secondary">お問い合わせ</a>
