--- a/products.html
+++ b/products.html
@@ -35,7 +35,7 @@
     <section class="page-header">
         <div class="container">
             <h1>商品紹介</h1>
-            <p style="text-align:center; margin-bottom:40px;">台湾烏魚子（台湾カラスミ）は、新鮮なボラの卵巣を丁寧に塩漬けし、天日干しで仕上げた台湾の代表的な珍味です。濃厚な旨味と独特の風味で、「海のチーズ」とも称されます。BOLA JAPANでは、台湾から直輸入した最高品質のカラスミを、用途に合わせてご用意しています。</p>
+            <p style="text-align:center; margin-bottom:40px;">台湾カラスミ（烏魚子）は、新鮮なボラの卵巣を丁寧に塩漬けし、天日干しで仕上げた台湾の代表的な珍味です。濃厚な旨味と独特の風味で、「海のチーズ」とも称されます。BOLA JAPANでは、台湾から直輸入した最高品質のカラスミを、用途に合わせてご用意しています。</p>
         </div>
     </section>
 
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <p style="text-align:center; margin-top:40px;">その他のサイズや数量、ギフト包装などのご要望にも対応いたします。オーダーメイドのギフトセットや特別なご用途に合わせたカスタマイズも承っております。美しい包装紙やのし紙もご用意できますので、大切な方への贈り物としても安心してお選びいただけます。お気軽にお問い合わせください。</p>
+            <!-- <p style="text-align:center; margin-top:40px;">その他のサイズや数量、ギフト包装などのご要望にも対応いたします。オーダーメイドのギフトセットや特別なご用途に合わせたカスタマイズも承っております。美しい包装紙やのし紙もご用意できますので、大切な方への贈り物としても安心してお選びいただけます。お気軽にお問い合わせください。</p> -->
         </div>
     </section>
 
